<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:gravity="fill_vertical"
    android:background="@android:color/background_dark">


    <EditText
        android:id="@+id/edittext_id"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:inputType="none"
        android:textSize="60sp"
        android:textColor="@color/white"
        android:gravity="end"
        android:padding="16dp"
        android:layout_margin="16dp"
        android:focusable="true"
        tools:ignore="Autofill,ExtraText,LabelFor" />

    <!-- First row of buttons (1, 2, 3, /) -->
    <LinearLayout
        android:id="@+id/button_row_1"
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edittext_id"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:paddingStart="20dp"
        android:paddingEnd="20dp">

        <Button
            android:id="@+id/button_id1"
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:layout_weight="1"
            android:text="@string/one"
            android:padding="10dp"
            android:textSize="24sp"
            android:textColor="#fff"
            android:layout_marginEnd="10dp"
            android:onClick="onButtonClick"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/button_id2"
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:layout_weight="1"
            android:text="@string/two"
            android:padding="10dp"
            android:textSize="24sp"
            android:textColor="#fff"

            android:layout_marginEnd="10dp"
            android:onClick="onButtonClick"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/button_id3"
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:layout_weight="1"
            android:text="@string/three"
            android:padding="10dp"
            android:textSize="24sp"
            android:textColor="#fff"
            tools:ignore="ButtonStyle"
            android:layout_marginEnd="10dp"
            android:onClick="onButtonClick" />

        <Button
            android:id="@+id/button_divide"
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:layout_weight="1"
            android:text="@string/divide"
            android:padding="10dp"
            android:textSize="24sp"
            android:textColor="#fff"
            android:onClick="onButtonClick"
            tools:ignore="ButtonStyle"
            />
    </LinearLayout>

    <!-- Second row of buttons (4, 5, 6, X) -->
    <LinearLayout
        android:id="@+id/button_row_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_row_1"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:paddingStart="20dp"
        android:paddingEnd="20dp">

        <Button
            android:id="@+id/button_id4"
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:layout_weight="1"
            android:text="@string/four"
            android:padding="10dp"
            android:textSize="24sp"
            android:textColor="#fff"
            tools:ignore="ButtonStyle"
            android:layout_marginEnd="10dp"
            android:onClick="onButtonClick"
            />

        <Button
            android:id="@+id/button_id5"
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:layout_weight="1"
            android:text="@string/five"
            android:padding="10dp"
            android:textSize="24sp"
            android:textColor="#fff"
            tools:ignore="ButtonStyle"
            android:layout_marginEnd="10dp"
            android:onClick="onButtonClick"
            />

        <Button
            android:id="@+id/button_id6"
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:layout_weight="1"
            android:text="@string/six"
            android:padding="10dp"
            android:textSize="24sp"
            android:textColor="#fff"
            tools:ignore="ButtonStyle"
            android:layout_marginEnd="10dp"
            android:onClick="onButtonClick"
            />

        <Button
            android:id="@+id/button_multiply"
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:layout_weight="1"
            android:text="@string/multiply"
            android:padding="10dp"
            android:textSize="24sp"
            android:textColor="#fff"
            tools:ignore="ButtonStyle"
            android:onClick="onButtonClick"
            />
    </LinearLayout>

    <!-- Third row of buttons (7, 8, 9, -) -->
    <LinearLayout
        android:id="@+id/button_row_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_row_2"
        android:layout_marginTop="10dp"

        android:paddingStart="20dp"
        android:paddingEnd="20dp">

        <Button
            android:id="@+id/button_id7"
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:layout_weight="1"
            android:text="@string/seven"
            android:padding="10dp"
            android:textSize="24sp"
            android:textColor="#fff"
            tools:ignore="ButtonStyle"
            android:layout_marginEnd="10dp"
            android:onClick="onButtonClick"
            />

        <Button
            android:id="@+id/button_id8"
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:layout_weight="1"
            android:text="@string/eight"
            android:padding="10dp"
            android:textSize="24sp"
            android:textColor="#fff"
            tools:ignore="ButtonStyle"
            android:layout_marginEnd="10dp"
            android:onClick="onButtonClick"
            />

        <Button
            android:id="@+id/button_id9"
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:layout_weight="1"
            android:text="@string/nine"
            android:padding="10dp"
            android:textSize="24sp"
            android:textColor="#fff"
            tools:ignore="ButtonStyle"
            android:layout_marginEnd="10dp"
            android:onClick="onButtonClick"
            />

        <Button
            android:id="@+id/button_minus"
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:layout_weight="1"
            android:text="@string/sub"
            android:padding="10dp"
            android:textSize="24sp"
            android:textColor="#fff"
            tools:ignore="ButtonStyle"
            android:onClick="onButtonClick"
            />
    </LinearLayout>

    <!-- Fourth row of buttons (00, 0, ., +) -->
    <LinearLayout
        android:id="@+id/button_row_4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_row_3"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:paddingStart="20dp"
        android:paddingEnd="20dp">

        <Button
            android:id="@+id/button_00"
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:layout_weight="1"
            android:text="@string/zeros"
            android:padding="10dp"
            android:textSize="24sp"
            android:textColor="#fff"
            android:layout_marginEnd="10dp"
            android:onClick="onButtonClick"
            tools:ignore="ButtonStyle"
            />

        <Button
            android:id="@+id/button_0"
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:layout_weight="1"
            android:text="@string/zero"
            android:padding="10dp"
            android:textSize="24sp"
            android:textColor="#fff"
            android:layout_marginEnd="10dp"
            android:onClick="onButtonClick"
            tools:ignore="ButtonStyle"
            />

        <Button
            android:id="@+id/button_dot"
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:layout_weight="1"
            android:text="@string/dot"
            android:padding="10dp"
            android:textSize="24sp"
            android:textColor="#fff"
            android:layout_marginEnd="10dp"
            android:onClick="onButtonClick"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/button_plus"
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:layout_weight="1"
            android:text="@string/add"
            android:padding="10dp"
            android:textSize="24sp"
            android:textColor="#fff"
            android:onClick="onButtonClick"
            tools:ignore="ButtonStyle" />
    </LinearLayout>

    <!-- Fifth row of buttons (equals, clear) -->
    <LinearLayout
        android:id="@+id/button_row_5"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/button_row_4"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:paddingStart="20dp"
        android:paddingEnd="20dp">

        <Button
            android:id="@+id/button_equals"
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:layout_weight="1"
            android:text="@string/equals"
            android:padding="10dp"
            android:textSize="24sp"
            android:textColor="#fff"
            android:background="@android:color/black"
            android:layout_marginEnd="10dp"
            android:onClick="onButtonClick"
            tools:ignore="ButtonStyle"
            />

        <Button
            android:id="@+id/button_clear"
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:layout_weight="1"
            android:background="@android:color/black"
            android:onClick="onButtonClick"
            android:padding="10dp"
            android:text="@string/Clear"
            android:textColor="#fff"
            android:textSize="24sp"
            tools:ignore="ButtonStyle" />

    </LinearLayout>

</RelativeLayout>
